[project]
name = "yahoo-llm"
version = "0.1.0"
description = "Fine-tune a small LLM to talk like Yahoo Answers users"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "datasets>=2.14.0",
    "trl>=0.7.0",
    "peft>=0.7.0",
    "accelerate>=0.25.0",
    "sentencepiece",
    "protobuf",
    "wandb",
    "hf-transfer>=0.1.9",
    "bitsandbytes>=0.48.0 ; sys_platform == 'linux' or sys_platform == 'win32'",
]

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
